--- a/mta.yaml
+++ b/mta.yaml
@@ -29,26 +29,32 @@ modules:
         properties:
           srv-url: ${default-url}
     requires:
-      - name: bookstore-db
-      - name: bookstore-auth
+      - name: bookstore-hdi-container
+      - name: bookstore-xsuaa
 
-  - name: bookstore-db-deployer
-    type: hdb
+  - name: bookshop-db
+# -----------------------------------------------------------
+    type: nodejs
     path: db
     parameters:
-      buildpack: nodejs_buildpack
+      memory: 256M
+      disk-quota: 512M
+      no-route: true
+      no-start: true
+      tasks:    # execute hdi deployer on app creation/update
+      - name: hdi-deploy
+        command: npm run start
     requires:
-      - name: bookstore-db
+      # Set user and password to secure rest API via basic authentication
+      - name: bookstore-hdi-container
 
 resources:
-  - name: bookstore-db
-    type: com.sap.xs.hdi-container
+  - name: bookstore-hdi-container
+    type: org.cloudfoundry.managed-service
     parameters:
       service: hana
       service-plan: hdi-shared
-    properties:
-      hdi-service-name: ${service-name}
-  - name: bookstore-auth
+  - name: bookstore-xsuaa
     type: org.cloudfoundry.managed-service
     parameters:
       service: xsuaa
