--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,5 @@ applications:
   path: srv/target/bookstore-exec.jar
   random-route: true
   services:
-  - bookstore
-  - bookstore-xsuaa
+  - bookstore-db
+  - bookstore-auth
